Add nested aggregation support for terms collector
