# src/main/java/com/yelp/nrtsearch/server/luceneserver/search/collectors/CollectorCreator.java
@@ -20,11 +20,15 @@ import com.yelp.nrtsearch.server.grpc.Collector;
 import com.yelp.nrtsearch.server.grpc.CollectorResult;
 import com.yelp.nrtsearch.server.grpc.PluginCollector;
 import com.yelp.nrtsearch.server.luceneserver.search.collectors.additional.TermsCollectorManager;
+import com.yelp.nrtsearch.server.luceneserver.search.collectors.additional.TopHitsCollectorManager;
 import com.yelp.nrtsearch.server.plugins.CollectorPlugin;
 import com.yelp.nrtsearch.server.plugins.Plugin;
 import com.yelp.nrtsearch.server.utils.StructValueTransformer;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 /**
  * Helper class for creating instances of {@link AdditionalCollectorManager} from the grpc {@link
@@ -54,9 +58,24 @@ public class CollectorCreator {
    */
   public AdditionalCollectorManager<? extends org.apache.lucene.search.Collector, CollectorResult>
       createCollectorManager(CollectorCreatorContext context, String name, Collector collector) {
+    return createCollectorManagerSupplier(context, name, collector).get();
+  }
+
+  private Supplier<
+          AdditionalCollectorManager<? extends org.apache.lucene.search.Collector, CollectorResult>>
+      createCollectorManagerSupplier(
+          CollectorCreatorContext context, String name, Collector collector) {
+    Map<String, Supplier<AdditionalCollectorManager<?, CollectorResult>>> nestedCollectorSuppliers =
+        collector.getNestedCollectorsMap().entrySet().stream()
+            .collect(
+                Collectors.toMap(
+                    Entry::getKey,
+                    e -> createCollectorManagerSupplier(context, e.getKey(), e.getValue())));
     switch (collector.getCollectorsCase()) {
       case TERMS:
-        return TermsCollectorManager.buildManager(name, collector.getTerms(), context);
+        return () ->
+            TermsCollectorManager.buildManager(
+                name, collector.getTerms(), context, nestedCollectorSuppliers);
       case PLUGINCOLLECTOR:
         PluginCollector pluginCollector = collector.getPluginCollector();
         CollectorProvider<?> provider = collectorsMap.get(pluginCollector.getName());
@@ -67,8 +86,14 @@ public class CollectorCreator {
                   + ", must be one of: "
                   + collectorsMap.keySet());
         }
-        return provider.get(
-            name, context, StructValueTransformer.transformStruct(pluginCollector.getParams()));
+        return () ->
+            provider.get(
+                name,
+                context,
+                StructValueTransformer.transformStruct(pluginCollector.getParams()),
+                nestedCollectorSuppliers);
+      case TOPHITSCOLLECTOR:
+        return () -> new TopHitsCollectorManager(name, collector.getTopHitsCollector(), context);
       default:
         throw new IllegalArgumentException(
             "Unknown Collector type: " + collector.getCollectorsCase());
