# src/main/java/com/yelp/nrtsearch/server/luceneserver/search/collectors/additional/ScriptTermsCollectorManager.java
@@ -21,15 +21,23 @@ import com.yelp.nrtsearch.server.grpc.TermsCollector.TermsSourceCase;
 import com.yelp.nrtsearch.server.luceneserver.script.FacetScript;
 import com.yelp.nrtsearch.server.luceneserver.script.FacetScript.Factory;
 import com.yelp.nrtsearch.server.luceneserver.script.ScriptService;
+import com.yelp.nrtsearch.server.luceneserver.search.collectors.AdditionalCollectorManager;
 import com.yelp.nrtsearch.server.luceneserver.search.collectors.CollectorCreatorContext;
+import com.yelp.nrtsearch.server.luceneserver.search.collectors.additional.NestedCollectorManagers.NestedCollectors;
+import com.yelp.nrtsearch.server.luceneserver.search.collectors.additional.NestedCollectorManagers.NestedCollectors.NestedLeafCollectors;
 import com.yelp.nrtsearch.server.utils.ScriptParamsUtils;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntMaps;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import java.io.IOException;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.Map;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import org.apache.lucene.index.LeafReaderContext;
+import org.apache.lucene.search.Collector;
 import org.apache.lucene.search.LeafCollector;
 import org.apache.lucene.search.Scorable;
 import org.apache.lucene.search.ScoreMode;
@@ -43,12 +51,15 @@ public class ScriptTermsCollectorManager extends TermsCollectorManager {
    * @param name Collection name from request
    * @param grpcTermsCollector Collector parameters from request
    * @param context context info for collector building
+   * @param nestedCollectorSuppliers suppliers to create nested collector managers
    */
   public ScriptTermsCollectorManager(
       String name,
       com.yelp.nrtsearch.server.grpc.TermsCollector grpcTermsCollector,
-      CollectorCreatorContext context) {
-    super(name, grpcTermsCollector.getSize());
+      CollectorCreatorContext context,
+      Map<String, Supplier<AdditionalCollectorManager<? extends Collector, CollectorResult>>>
+          nestedCollectorSuppliers) {
+    super(name, grpcTermsCollector.getSize(), nestedCollectorSuppliers);
 
     if (grpcTermsCollector.getTermsSourceCase() == TermsSourceCase.SCRIPT) {
       Factory factory =
@@ -73,7 +84,14 @@ public class ScriptTermsCollectorManager extends TermsCollectorManager {
       throws IOException {
     Object2IntMap<Object> combinedCounts = combineCounts(collectors);
     BucketResult.Builder bucketBuilder = BucketResult.newBuilder();
-    fillBucketResult(bucketBuilder, combinedCounts);
+    Collection<NestedCollectors> nestedCollectors;
+    if (hasNestedCollectors()) {
+      nestedCollectors =
+          collectors.stream().map(TermsCollector::getNestedCollectors).collect(Collectors.toList());
+    } else {
+      nestedCollectors = Collections.emptyList();
+    }
+    fillBucketResult(bucketBuilder, combinedCounts, nestedCollectors);
 
     return CollectorResult.newBuilder().setBucketResult(bucketBuilder.build()).build();
   }
@@ -107,7 +125,7 @@ public class ScriptTermsCollectorManager extends TermsCollectorManager {
     }
 
     @Override
-    public ScoreMode scoreMode() {
+    public ScoreMode implementationScoreMode() {
       // Script cannot currently use score
       return ScoreMode.COMPLETE_NO_SCORES;
     }
@@ -115,14 +133,24 @@ public class ScriptTermsCollectorManager extends TermsCollectorManager {
     /** Leaf Collector implementation to record term counts generated by a {@link FacetScript}. */
     public class TermsLeafCollector implements LeafCollector {
       final FacetScript facetScript;
+      final NestedLeafCollectors nestedLeafCollectors;
 
       public TermsLeafCollector(LeafReaderContext leafContext) throws IOException {
         facetScript = scriptFactory.newInstance(leafContext);
+        NestedCollectors nestedCollectors = getNestedCollectors();
+        if (nestedCollectors != null) {
+          nestedLeafCollectors = nestedCollectors.getLeafCollector(leafContext);
+        } else {
+          nestedLeafCollectors = null;
+        }
       }
 
       @Override
       public void setScorer(Scorable scorer) throws IOException {
         // TODO make score available to script
+        if (nestedLeafCollectors != null) {
+          nestedLeafCollectors.setScorer(scorer);
+        }
       }
 
       @Override
@@ -130,21 +158,31 @@ public class ScriptTermsCollectorManager extends TermsCollectorManager {
         facetScript.setDocId(doc);
         Object scriptResult = facetScript.execute();
         if (scriptResult != null) {
-          processScriptResult(scriptResult);
+          processScriptResult(scriptResult, doc);
         }
       }
 
-      private void processScriptResult(Object scriptResult) {
+      private void processScriptResult(Object scriptResult, int doc) throws IOException {
         if (scriptResult instanceof Iterable) {
           ((Iterable<?>) scriptResult)
               .forEach(
                   v -> {
                     if (v != null) {
                       countsMap.addTo(v, 1);
+                      if (nestedLeafCollectors != null) {
+                        try {
+                          nestedLeafCollectors.collect(v, doc);
+                        } catch (IOException e) {
+                          throw new RuntimeException(e);
+                        }
+                      }
                     }
                   });
         } else {
           countsMap.addTo(scriptResult, 1);
+          if (nestedLeafCollectors != null) {
+            nestedLeafCollectors.collect(scriptResult, doc);
+          }
         }
       }
     }
